[package]
name = "praecam"
version = "0.1.0"
edition = "2024"

[dependencies]
gphoto2 = "3.4.1"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.24"

[dependencies.nokhwa]
version = "0.10"
# Use the native input backends, enable WGPU integration
features = ["input-native"]
